# ocaml-qdrant

./: README.md  dune-project  qdrant.opam
example/: dune  health_check.ml  search.ml
lib/: dune  qdrant.ml  qdrant.mli
lib/proto/: collections.ml  collections_service.ml  json_with_int.ml  points.ml  points_service.ml  qdrant.ml  snapshots_service.ml
proto/: sync.sh
